--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>SuViHaSa Yoga Studio</title>
-  <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Serenity Yoga</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <h1>Welcome to SuViHaSa Yoga</h1>
-  <p>we believe that balance isn't just a goal — it's a way of living. Whether you're a curious beginner or a seasoned yogi, our platform is designed to guide your practice with purpose, mindfulness, and ease</p>
-  <p>We blend tradition with technology to bring yoga to your screen, anytime and anywhere. Find your flow. Breathe. Become.</p>   
-  </body>
-  <nav>
-  <a href="/classes.html">Classes</a> |
-  <a href="/poses.html">Poses</a> |
-  <a href="/schedule.html">Schedule</a>
+  <header class="hero">
+    <h1>Find Your Flow</h1>
+    <p>Premium yoga classes for every body and every goal.</p>
+    <a href="/classes.html" class="cta-button">Explore Classes</a>
+  </header>
+
+  <nav class="main-nav">
+    <a href="/index.html">Home</a>
+    <a href="/classes.html">Classes</a>
+    <a href="/poses.html">Poses</a>
+    <a href="/schedule.html">Schedule</a>
   </nav>
+
+  <section class="features">
+    <div>
+      <h2>On-Demand Library</h2>
+      <p>Access yoga videos anytime, anywhere.</p>
+    </div>
+    <div>
+      <h2>Expert Instructors</h2>
+      <p>Practice with certified professionals.</p>
+    </div>
+    <div>
+      <h2>Personalized Plans</h2>
+      <p>Build a routine that fits your life.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Serenity Yoga. All rights reserved.</p>
+  </footer>
+</body>
 </html>
