--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Serenity Yoga. All rights reserved.</p>
+    <p>&copy; 2025 SuViHaSa Yoga. All rights reserved.</p>
   </footer>
 </body>
 </html>
