--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
     <a href="/poses.html">Poses</a>
     <a href="/schedule.html">Schedule</a>
   </nav>
-
+  <video width="640" height="360" controls>
+    <source src="/videos/IMG_4309.MOV" type="video/MOV">
+    Your browser does not support the video tag.
+  </video>
   <section class="features">
     <div>
       <h2>On-Demand Library</h2>
