--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <a href="/schedule.html">Schedule</a>
   </nav>
   <video width="640" height="360" controls>
-    <source src="/videos/IMG_4309.MOV" type="video/MOV">
+    <source src="/videos/demo-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <section class="features">
