--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,12 @@
       <p>Build a routine that fits your life.</p>
     </div>
   </section>
+  <section class="learn-more">
+  <h2>Living Mindfully with Meditation</h2>
+  <p>Give yourself the gift of presence with guided meditation sessions led by certified instructors.</p>
+  <a href="/meditation.html" class="learn-button">Learn More</a>
+</section>
+
 
   <footer>
     <p>&copy; 2025 SuViHaSa Yoga. All rights reserved.</p>
