--- a/public/instructors.html
+++ b/public/instructors.html
@@ -3,4 +3,45 @@
   <h3>Sathvika Pasam</h3>
   <p>Certified Yoga instructor with 5+ years of experience.</p>
   <a href="/instructors.html">Learn More</a>
-</section>
+</section><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Meet Our Instructors | SuViHaSa Yoga</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Meet Our Instructors</h1>
+    <p>Guiding you on your journey to balance, strength, and serenity.</p>
+  </header>
+
+  <main class="instructors-container">
+    <section class="instructor-card">
+      <img src="/images/instructor.jpg" alt="Sathvika Pasam">
+      <h3>Sathvika Pasam</h3>
+      <p>Certified Yoga instructor with 5+ years of experience. Sathvika blends modern flow with ancient wisdom to create inclusive, energizing sessions.</p>
+      <blockquote>“Yoga begins with listening — to breath, body, and soul.”</blockquote>
+    </section>
+
+    <section class="instructor-card">
+      <img src="/images/Surendranath.jpg" alt="Surendranath Pasam">
+      <h3>Surendranath Pasam</h3>
+      <p>Specialist in Hatha and Pranayama. Surendranath’s sessions emphasize alignment, breath awareness, and inner stillness.</p>
+      <blockquote>“Each pose is a conversation with yourself.”</blockquote>
+    </section>
+
+    <section class="instructor-card">
+      <img src="/images/Krishna Joshi.jpg" alt="Krishna Joshi">
+      <h3>Krishna Joshi</h3>
+      <p>Restorative yoga guide and meditation facilitator. Krishna’s calm energy invites students to gently explore the depths of presence.</p>
+      <blockquote>“Your breath is your anchor.”</blockquote>
+    </section>
+  </main>
+
+  <footer>
+    <p>SuViHaSa Yoga &copy; 2025 | <a href="index.html">Home</a></p>
+  </footer>
+</body>
+</html>
