--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,16 @@
     <p>Premium yoga classes for every body and every goal.</p>
     <a href="/classes.html" class="cta-button">Explore Classes</a>
   </header>
-
+  <nav class="main-nav">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="instructors.html">Meet the Instructors</a></li>
+    <li><a href="meditation.html">Meditation</a></li>
+    <li><a href="testimonials.html">Testimonials</a></li>
+    <li><a href="pricing.html">Plans & Pricing</a></li>
+  </ul>
+  </nav>
+ 
   <nav class="main-nav">
     <a href="/index.html">Home</a>
     <a href="/classes.html">Classes</a>
