--- a/public/instructors.html
+++ b/public/instructors.html
@@ -12,6 +12,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <nav class="main-nav">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="instructors.html">Meet the Instructors</a></li>
+    <li><a href="meditation.html">Meditation</a></li>
+    <li><a href="testimonials.html">Testimonials</a></li>
+    <li><a href="pricing.html">Plans & Pricing</a></li>
+  </ul>
+  </nav>
+
   <header>
     <h1>Meet Our Instructors</h1>
     <p>Guiding you on your journey to balance, strength, and serenity.</p>
