--- a/public/instructors.html
+++ b/public/instructors.html
@@ -1,5 +1,5 @@
 <section class="instructor-card">
-  <img src="/images/instructor.jpg" alt="Instructor Name">
+  <img src="/images/instructor1.jpg" alt="Instructor Name">
   <h3>Sathvika Pasam</h3>
   <p>Certified Yoga instructor with 5+ years of experience.</p>
   <a href="/instructors.html">Learn More</a>
@@ -29,7 +29,7 @@
 
   <main class="instructors-container">
     <section class="instructor-card">
-      <img src="/images/instructor.jpg" alt="Sathvika Pasam">
+      <img src="/images/instructor1.jpg" alt="Sathvika Pasam">
       <h3>Sathvika Pasam</h3>
       <p>Certified Yoga instructor with 5+ years of experience. Sathvika blends modern flow with ancient wisdom to create inclusive, energizing sessions.</p>
       <blockquote>“Yoga begins with listening — to breath, body, and soul.”</blockquote>
