--- a/public/instructors.html
+++ b/public/instructors.html
@@ -43,9 +43,9 @@
     </section>
 
     <section class="instructor-card">
-      <img src="/images/Krishna Joshi.jpg" alt="Krishna Joshi">
-      <h3>Krishna Joshi</h3>
-      <p>Restorative yoga guide and meditation facilitator. Krishna’s calm energy invites students to gently explore the depths of presence.</p>
+      <img src="/images/Ramadevi.jpg" alt="Ramadevi">
+      <h3>Ramadevi</h3>
+      <p>Restorative yoga guide and meditation facilitator. Ramadevi’s calm energy invites students to gently explore the depths of presence.</p>
       <blockquote>“Your breath is your anchor.”</blockquote>
     </section>
   </main>
