--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,16 @@
     <a href="/classes.html" class="cta-button">Explore Classes</a>
   </header>
   <nav class="main-nav">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="instructors.html">Meet the Instructors</a></li>
-    <li><a href="meditation.html">Meditation</a></li>
-    <li><a href="testimonials.html">Testimonials</a></li>
-    <li><a href="pricing.html">Plans & Pricing</a></li>
-  </ul>
-  </nav>
- 
-  <nav class="main-nav">
-    <a href="/index.html">Home</a>
-    <a href="/classes.html">Classes</a>
-    <a href="/poses.html">Poses</a>
-    <a href="/schedule.html">Schedule</a>
-  </nav>
+  <a href="index.html">Home</a>
+  <a href="classes.html">Classes</a>
+  <a href="poses.html">Poses</a>
+  <a href="schedule.html">Schedule</a>
+  <a href="instructors.html">Meet the Instructors</a>
+  <a href="meditation.html">Meditation</a>
+  <a href="testimonials.html">Testimonials</a>
+  <a href="pricing.html">Plans & Pricing</a>
+</nav>
+
   <video width="640" height="360" controls>
     <source src="/videos/demo-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
