--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
   <a href="testimonials.html">Testimonials</a>
   <a href="pricing.html">Plans & Pricing</a>
 </nav>
+<section class="full-image-section">
+  <img src="/images/yoga-hero.jpg" alt="Yoga Banner" />
+  <hr class="center-line" />
+</section>
 
   <video width="640" height="360" controls>
     <source src="/videos/demo-video.mp4" type="video/mp4">
