--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <a href="pricing.html">Plans & Pricing</a>
 </nav>
 <section class="full-image-section">
-  <img src="/images/yoga-hero.jpg" alt="Yoga Banner" />
+  <img src="/images/urdwanamaskar.jpg" alt="Yoga Banner" />
   <hr class="center-line" />
 </section>
 
