--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="hero">
-    <h1>Find Your Flow</h1>
+    <h1>SuViHaSa Yoga</h1>
     <p>Premium yoga classes for every body and every goal.</p>
     <a href="/classes.html" class="cta-button">Explore Classes</a>
   </header>
