--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
   <img src="/images/padamasana.jpg" alt="Yoga Banner" />
   <hr class="center-line" />
 </section>
-
+<section class="full-image-section">
+  <img src="/images/urdwanamaskara.jpg" alt="Yoga Banner" />
+  <hr class="center-line" />
+</section>
   <video width="640" height="360" controls>
     <source src="/videos/demo-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
