--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,17 @@
   <a href="testimonials.html">Testimonials</a>
   <a href="pricing.html">Plans & Pricing</a>
 </nav>
-<section class="full-image-section">
-  <img src="/images/padamasana.jpg" alt="Yoga Banner" />
-  <hr class="center-line" />
+<section class="image-row">
+  <div class="image-container">
+    <img src="/images/padamasana.jpg" alt="Padmasana Pose" />
+    <hr class="center-line" />
+  </div>
+  <div class="image-container">
+    <img src="/images/urdwanamaskara.jpg" alt="Urdhva Namaskara Pose" />
+    <hr class="center-line" />
+  </div>
 </section>
-<section class="full-image-section">
-  <img src="/images/urdwanamaskara.jpg" alt="Yoga Banner" />
-  <hr class="center-line" />
-</section>
+
   <video width="640" height="360" controls>
     <source src="/videos/demo-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
