--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,9 @@
   <a href="testimonials.html">Testimonials</a>
   <a href="pricing.html">Plans & Pricing</a>
 </nav>
-<section class="image-row">
-  <div class="image-container">
-    <img src="/images/padamasana.jpg" alt="Padmasana Pose" />
-    <hr class="center-line" />
-  </div>
-  <div class="image-container">
-    <img src="/images/urdwanamaskara.jpg" alt="Urdhva Namaskara Pose" />
-    <hr class="center-line" />
-  </div>
+<section class="full-image-section">
+  <img src="/images/padamasana.jpg" alt="Yoga Banner" />
+  <hr class="center-line" />
 </section>
 
   <video width="640" height="360" controls>
