--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <h1>SuViHaSa Yoga</h1>
-    <p>Premium yoga classes for every body and every goal.</p>
+    <p>Join our mindful yoga community and embrace wellness every day.</p>
     <a href="/classes.html" class="cta-button">Explore Classes</a>
   </header>
   <nav class="main-nav">
